--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "@chakra-ui/modal": "^2.2.9",
     "@chakra-ui/popover": "^2.1.8",
     "@chakra-ui/portal": "^2.0.15",
+    "@chakra-ui/react": "^3.12.0",
     "@chakra-ui/system": "2.5.7",
     "@chakra-ui/theme-tools": "^1.3.6",
     "@chakra-ui/tooltip": "^2.2.6",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.3",
+    "@hookform/resolvers": "^4.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -45,8 +47,10 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "apexcharts": "3.35.5",
-    "framer-motion": "^7.10.2",
+    "aws-sdk": "^2.1692.0",
+    "framer-motion": "^7.10.3",
     "ieee754": "^1.2.1",
+    "lucide-react": "^0.479.0",
     "mapbox-gl": "^2.10.0",
     "next": "^15.1.5",
     "next-transpile-modules": "^9.0.0",
@@ -63,6 +67,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^19.0.0-rc.1",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.4.0",
     "react-is": "^18.0.0",
     "react-map-gl": "^7.0.20",
@@ -75,6 +80,7 @@
     "tailwind-merge": "^3.0.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
