--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@chakra-ui/system": "2.5.7",
     "@chakra-ui/theme-tools": "^1.3.6",
     "@chakra-ui/tooltip": "^2.2.6",
-    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fullcalendar/daygrid": "^5.11.3",
