--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "next lint",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "preinstall": "npx npm-force-resolutions"
+    "preinstall": "npx npm-force-resolutions",
+    "init-workflow-tasks": "node src/scripts/run-init-workflow-tasks.js",
+    "setup-workflow-tables": "node -r ts-node/register scripts/setup-workflow-tables.ts",
+    "setup-workflow-tables:force": "node -r ts-node/register scripts/setup-workflow-tables.ts --force"
   },
   "dependencies": {
     "@aws-sdk/client-comprehend": "^3.758.0",
@@ -49,6 +52,7 @@
     "@types/react-dom": "^18.0.6",
     "apexcharts": "3.35.5",
     "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^7.10.3",
     "ieee754": "^1.2.1",
     "lucide-react": "^0.479.0",
@@ -66,6 +70,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-circular-slider-svg": "^0.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0-rc.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
@@ -77,6 +83,7 @@
     "react-router-dom": "^6.4.0",
     "react-tabs": "^5.1.0",
     "react-to-print": "^2.14.6",
+    "recharts": "^2.15.1",
     "stylis": "^4.1.1",
     "tailwind-merge": "^3.0.2",
     "typescript": "^4.9.4",
@@ -104,7 +111,8 @@
     "postcss": "^8.4.30",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.2"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9",
