--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/react-dom": "^18.0.6",
     "apexcharts": "3.35.5",
     "aws-sdk": "^2.1692.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^7.10.3",
     "ieee754": "^1.2.1",
@@ -87,6 +89,7 @@
     "stylis": "^4.1.1",
     "tailwind-merge": "^3.0.2",
     "typescript": "^4.9.4",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
